--- a/mustra-react-web/src/App.css
+++ b/mustra-react-web/src/App.css
@@ -3,3 +3,7 @@
 body {
     font-family: "Noto Sans KR", sans-serif;
 }
+.black-mask {
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
