--- a/mustra-react-web/src/module/PredictModule/PredictModule.css
+++ b/mustra-react-web/src/module/PredictModule/PredictModule.css
@@ -1,8 +1,14 @@
 .PredictModule {
+    background: url("https://images.unsplash.com/photo-1501962679900-bea61483313b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     margin-top: 50px;
-    height: 60vh;
+    height: calc(100vh - 50px);
     background-color: black;
     color: white;
+    justify-content: center;
 }
 
 .PredictModule .header-row {
