--- a/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
+++ b/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
@@ -84,6 +84,7 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
+    background-color: rgb(39, 38, 38);
 }
 
 .collapse-wrapper .collapse-item-wrapper {
@@ -97,7 +98,7 @@
 }
 .collapse-wrapper .collapse-item-wrapper a {
     width: 100%;
-    color: rgb(39, 38, 38);
+    color: white;
     text-decoration: none !important;
 }
 
