--- a/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
+++ b/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
@@ -2,7 +2,7 @@
     top: 0px;
     width: 100%;
     height: 50px;
-    background-color: rgb(39, 38, 38);
+    background-color: rgb(0, 0, 0);
 }
 
 .headercomponent .header-wrapper {
@@ -17,12 +17,13 @@
 }
 .header-logo-col {
     float: left;
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .header-logo-col img {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
 }
 
 /* PC ONLY */
@@ -49,7 +50,7 @@
     height: 50px;
     padding-top: 13px;
     padding-bottom: 13px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .pc-only .header-menu-col .menu-item {
@@ -84,7 +85,7 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    background-color: rgb(39, 38, 38);
+    background-color: black;
 }
 
 .collapse-wrapper .collapse-item-wrapper {
