PredictModule 로딩 페이지 디자인 추가

--- a/mustra-react-web/src/module/PredictModule/PredictModule.css
+++ b/mustra-react-web/src/module/PredictModule/PredictModule.css
@@ -12,6 +12,8 @@
 }
 .PredictModule .content-inner {
     padding-top: 200px;
+}
+.PredictModule .fade-div {
     animation: fadein 2s;
     -moz-animation: fadein 2s; /* Firefox */
     -webkit-animation: fadein 2s; /* Safari and Chrome */
