결과 페이지 완성

--- a/mustra-react-web/src/module/PredictModule/PredictModule.css
+++ b/mustra-react-web/src/module/PredictModule/PredictModule.css
@@ -58,3 +58,24 @@
     color: gray;
     font-size: 15px;
 }
+
+.PredictModule .item-row #item-label {
+    color: gray;
+    font-size: 15px;
+}
+
+.PredictModule .item-row #item-value {
+    font-size: 20px;
+}
+
+.PredictModule .item-row #rank {
+    font-size: 40px;
+}
+
+.PredictModule .result {
+    padding-bottom: 20px;
+}
+
+.PredictModule .opinion {
+    cursor: pointer;
+}
