--- a/mustra-react-web/src/module/CommentModule/CommentModule.css
+++ b/mustra-react-web/src/module/CommentModule/CommentModule.css
@@ -3,14 +3,18 @@
     opacity: 0.9;
 }
 
-.comment-modal-header {
-    padding-left: 15px;
-    padding-top: 20px;
-    font-family: "Noto Sans KR", sans-serif;
-    font-size: 25px;
-    font-weight: bold;
+.comment-modal-header.modal-header {
     border-bottom: none;
-    text-align: center;
+    padding-right: 20px !important;
+    padding-left: 135px !important;
+    padding-top: 20px !important;
+}
+
+.comment-modal-header.modal-header .modal-title {
+    font-family: "Noto Sans KR", sans-serif !important;
+    font-size: 25px !important;
+    font-weight: bold !important;
+    text-align: center !important;
     color: lightgray;
 }
 
