--- a/mustra-react-web/src/module/CommentModule/CommentModule.css
+++ b/mustra-react-web/src/module/CommentModule/CommentModule.css
@@ -1,6 +1,5 @@
 .comment-modal-wrapper {
-    background-color: black !important;
-    opacity: 0.9;
+    background-color: rgb(14, 14, 14) !important;
 }
 
 .comment-modal-header.modal-header {
