예측모듈에 팬수, 뮤비 추가

--- a/mustra-react-web/src/module/PredictModule/PredictModule.css
+++ b/mustra-react-web/src/module/PredictModule/PredictModule.css
@@ -79,3 +79,18 @@
 .PredictModule .opinion {
     cursor: pointer;
 }
+
+.PredictModule .item-col {
+    cursor: pointer;
+    margin-top: 20px;
+    padding: 20px;
+    float: left;
+    width: 50%;
+}
+
+.PredictModule .item-col:hover {
+    /* border-radius: 5px; */
+    font-size: 30px;
+    border-bottom: 1px solid yellow;
+    color: yellow;
+}
