--- a/mustra-react-web/src/item/FeedItem/FeedItem.css
+++ b/mustra-react-web/src/item/FeedItem/FeedItem.css
@@ -1,7 +1,6 @@
 .FeedItem {
     overflow: hidden;
     margin-bottom: 30px;
-    height: 100px;
     border-radius: 5px;
     background: rgb(26, 26, 26);
     color: white;
@@ -18,4 +17,63 @@
     height: 100%;
     background-color: rgb(61, 61, 61);
     width: 100px;
+}
+
+.FeedItem .feed-wrapper .main-col {
+    margin-left: 100px;
+    padding-top: 3px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 100%;
+}
+
+.main-col .data-col {
+    display: inline-flex;
+    width: 100%;
+    height: 40%;
+}
+
+.data-col .rank-row {
+    width: calc(100% - 650px);
+}
+
+.data-col .singer-row {
+    width: 300px;
+}
+
+.data-col .song-row {
+    width: 350px;
+}
+
+.main-col .comment-col {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.comment-col #item-name {
+    color: rgb(68, 67, 67);
+    font-size: 15px;
+    float: left;
+    margin-right: 12px;
+}
+.comment-col #item-value {
+    text-align: center;
+}
+
+.rank-row #item-name {
+    color: rgb(68, 67, 67);
+    font-size: 15px;
+}
+.rank-row #item-value {
+    padding-left: 5px;
+}
+.singer-row #item-name {
+    color: rgb(68, 67, 67);
+    font-size: 15px;
+}
+
+.song-row #item-name {
+    color: rgb(68, 67, 67);
+    font-size: 15px;
 }
