--- a/mustra-react-web/src/App.css
+++ b/mustra-react-web/src/App.css
@@ -7,7 +7,9 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.89);
 }
-
+.Article {
+    margin-top: 50px;
+}
 @keyframes fadein {
     from {
         opacity: 0;
