--- a/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
+++ b/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
@@ -1,7 +1,5 @@
-.headercomponent-true {
-    width: calc(100% - 30%);
-}
 .headercomponent {
+    position: fixed;
     top: 0px;
     width: 100%;
     height: 50px;
@@ -57,6 +55,7 @@
 }
 
 .pc-only .header-menu-col .menu-item {
+    cursor: pointer;
     color: white;
 }
 .pc-only .header-menu-col .menu-item {
