--- a/mustra-react-web/src/item/FeedItem/FeedItem.css
+++ b/mustra-react-web/src/item/FeedItem/FeedItem.css
@@ -1,79 +1,52 @@
 .FeedItem {
+    /* padding: 20px; */
     overflow: hidden;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
+    border-radius: 2px;
+    min-height: 50px;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.FeedItem .item-wrapper {
+    overflow: hidden;
+    border-bottom: 1px solid rgb(224, 224, 224);
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.FeedItem .stats-col {
+    float: left;
+    width: 40px;
+    text-align: center;
+}
+
+.FeedItem .stats-col #up,
+#down {
+    cursor: pointer;
+}
+
+.FeedItem .main-col {
+    padding-left: 10px;
+    padding-top: 5px;
+    float: left;
+    width: calc(100% - 50px);
+}
+
+.FeedItem .info-row #date {
+    float: right;
+    font-size: 14px;
+    color: gray;
+}
+
+.FeedItem .info-row #rank {
+    font-size: 18px;
+    padding: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: yellow;
     border-radius: 5px;
-    background: rgb(26, 26, 26);
-    color: white;
 }
 
-.FeedItem .feed-wrapper {
-    height: 100%;
-}
-
-.FeedItem .feed-wrapper .stats-col {
-    padding: 10px;
-    text-align: center;
-    float: left;
-    height: 100%;
-    background-color: rgb(61, 61, 61);
-    width: 100px;
-}
-
-.FeedItem .feed-wrapper .main-col {
-    margin-left: 100px;
-    padding-top: 3px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    height: 100%;
-}
-
-.main-col .data-col {
-    display: inline-flex;
-    width: 100%;
-    height: 40%;
-}
-
-.data-col .rank-row {
-    width: calc(100% - 650px);
-}
-
-.data-col .singer-row {
-    width: 300px;
-}
-
-.data-col .song-row {
-    width: 350px;
-}
-
-.main-col .comment-col {
-    width: 100%;
-    margin-top: 10px;
-}
-
-.comment-col #item-name {
-    color: rgb(68, 67, 67);
-    font-size: 15px;
-    float: left;
-    margin-right: 12px;
-}
-.comment-col #item-value {
-    text-align: center;
-}
-
-.rank-row #item-name {
-    color: rgb(68, 67, 67);
-    font-size: 15px;
-}
-.rank-row #item-value {
-    padding-left: 5px;
-}
-.singer-row #item-name {
-    color: rgb(68, 67, 67);
-    font-size: 15px;
-}
-
-.song-row #item-name {
-    color: rgb(68, 67, 67);
-    font-size: 15px;
+.FeedItem .content-row {
+    padding-top: 10px;
 }
