--- a/mustra-react-web/src/module/FeedList/FeedList.css
+++ b/mustra-react-web/src/module/FeedList/FeedList.css
@@ -1,4 +1,11 @@
 .FeedList {
     min-height: 100vh;
     padding-top: 50px;
+    background-color: rgb(248, 248, 248);
+}
+
+.FeedList .feed-header {
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
