--- a/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
+++ b/mustra-react-web/src/component/HeaderComponent/HeaderComponent.css
@@ -135,3 +135,11 @@
 .modal-body-email {
     width: 100%;
 }
+
+.modal-body {
+    padding-bottom: 3px !important;
+}
+
+.modal-footer {
+    padding-top: 0px !important;
+}
